@@ -614,7 +614,30 @@ void node_t::new_model_node(const std::string& node_name, CARD* d)
 {
   new_node(node_name, d);
   _ttt = CKT_BASE::_sim->newnode_model();
+  assert (d->subckt());
+  new_node(node_name, d->subckt());
+  // _ttt = CKT_BASE::_sim->newnode_model(); // global user number
+  _ttt = CKT_BASE::_sim->newnode_model(); // global user number
+  trace3("node_t::new_model_node", node_name, _ttt, _nnn->user_number());
+
+  //HACK: (no subckt/node tree yet)
+  // _nnn has its user number from the scope, which doesnt know about
+  // _sim->_total_nodes
+  _nnn->set_user_number(_ttt);
+
   //assert(_ttt == _nnn->flat_number());
+}
+/*--------------------------------------------------------------------------*/
+void node_t::new_sckt_node(const std::string& node_name, const CARD_LIST* scope)
+{
+  assert(scope);
+  new_node(node_name, scope);
+  _ttt = CKT_BASE::_sim->newnode_subckt();
+  trace3("node_t::new_sckt_node", node_name, _ttt, _nnn->user_number());
+  //assert(_ttt == _nnn->flat_number());
+  //
+  // later??
+  // _nnn->set_user_number(_ttt);
 }
 /*--------------------------------------------------------------------------*/
 void node_t::hack_subckt_node(NODE* n, int i )
