@@ -56,3 +56,4 @@
 - added admst hicum0 and ota_simple
 - added expect command (reads output file) for testing.
 - added std::vector and matrix PARAMETER
+- node order method "oTREE" sorts according to tree-structure (alpha)
